--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -496,6 +496,7 @@ en:
   label_last_login: Last connection
   label_registered_on: Registered on
   label_activity: Activity
+  label_log_time: Time 
   label_overall_activity: Overall activity
   label_user_activity: "%{value}'s activity"
   label_new: New
