--- a/config/locales/he.yml
+++ b/config/locales/he.yml
@@ -948,3 +948,4 @@ he:
   label_news_comment_added: Comment added to a news
   button_expand_all: Expand all
   button_collapse_all: Collapse all
+  label_bulk_edit_selected_time_entries: Bulk edit selected time entries
