--- a/config/locales/id.yml
+++ b/config/locales/id.yml
@@ -951,3 +951,4 @@ id:
   label_news_comment_added: Comment added to a news
   button_expand_all: Expand all
   button_collapse_all: Collapse all
+  label_bulk_edit_selected_time_entries: Bulk edit selected time entries
