--- a/config/locales/lv.yml
+++ b/config/locales/lv.yml
@@ -938,3 +938,4 @@ lv:
   label_news_comment_added: Comment added to a news
   button_expand_all: Expand all
   button_collapse_all: Collapse all
+  label_bulk_edit_selected_time_entries: Bulk edit selected time entries
