--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -925,3 +925,4 @@ nl:
   label_news_comment_added: Commentaar toegevoegd aan een nieuwsitem
   button_expand_all: Expand all
   button_collapse_all: Collapse all
+  label_bulk_edit_selected_time_entries: Bulk edit selected time entries
