--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -966,3 +966,4 @@ pt-BR:
   label_news_comment_added: Notícia recebeu um comentário
   button_expand_all: Expand all
   button_collapse_all: Collapse all
+  label_bulk_edit_selected_time_entries: Bulk edit selected time entries
