--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -936,3 +936,4 @@ ro:
   label_news_comment_added: Comment added to a news
   button_expand_all: Expand all
   button_collapse_all: Collapse all
+  label_bulk_edit_selected_time_entries: Bulk edit selected time entries
