--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -1025,3 +1025,4 @@
   label_news_comment_added: Comment added to a news
   button_expand_all: Expand all
   button_collapse_all: Collapse all
+  label_bulk_edit_selected_time_entries: Bulk edit selected time entries
